sass/_header.scss
@import "measurements";
@import "general-mixins";
@import "microformats";
@import "media-queries";
@import "grid";
@import "buttons";

$logo-width: 5rem;
$logo-height: 3rem;
$collapsed-service-height: 10px;
$collapsed-nav-height: 30px;

@warn "lots of refactoring to do here";

.alert {
  @include banner-alert;
}

.horizontal {
  display: table-cell;
  float: right;
  list-style: none;
  margin: 0;
  padding: 0;
  position: relative;
  @include clearfix;

  @include media($mobile-breakpoint) {
    float: none;
  }

  li {
    display: inline-block;
    margin-left: 0;
    margin-right: 0.35em;
    vertical-align: bottom;

    &:last-child {
      margin-right: 0;
    }
  }
}

.collapsed-menu-toggle,
.main-menu-toggle {
  display: none;
}

.main-menu-toggle {
  @include media($mobile-breakpoint) {
    background-color: $nypl-red;
    color: $nypl-white !important;
    display: block;
    margin: 0 -1rem;
    padding-right: 1rem;
    text-align: right;
    text-decoration: none;

    .nypl-icon {
      @include nypl-icon($nypl-white, $nypl-red);
    }
  }
}

.logo {
  position: absolute;
  width: $logo-width;

  @include media($mobile-breakpoint) {
    float: none;
    margin-right: 0.5rem;
    position: relative;
  }
}

.nypl-logo {
  background: url("../img/nypl.svg") no-repeat scroll 0 0/#{$logo-width} auto $nypl-white;
  border: 0;
  display: block;
  font-size: 0;
  height: $logo-height;
  margin-top: 0.4rem;
  margin-bottom: 0.1rem;
  overflow: hidden;
  -webkit-font-smoothing: antialiased;
  white-space: nowrap;
  width: $logo-width;

  @include media($mobile-breakpoint) {
    background: url("../img/lion.svg") no-repeat scroll 0 0/#{$logo-height - 0.5} auto $nypl-white; // should be a smart hiding of the original svg
    margin-right: 0.5rem;
    width: $logo-height;
  }
}

header .content-wrapper {
  @include full-width-wrapper($in-header: true);
}

.content {
  position: relative;
  @include clearfix;

  @include media($mobile-breakpoint) {
    width: 100%;
  }
}

.service {
  background-color: $nypl-red;

  @include media($mobile-breakpoint) {
    display: table-footer-group;
  }
}

@include media($mobile-breakpoint) {
  display: table;
  width: 100%;
}

header.collapsed {
  // using absolute px because each site might use different font-size
  border-bottom: 2px solid $nypl-light-gray;
  position: relative;

  &.collapsed .login-toggle {
    // absolute px because no control over page rem
    right: 110px;
    top: 9px;

    @include media($mobile-breakpoint) {
      font-size: 12px;
      top: -19px;

      div {
        right: -100%;
      }
    }
  }

  .main-menu-toggle {
    display: none;
  }

  .collapsed-menu-toggle {
    bottom: 0;
    color: $page-text-color;
    display: block;
    font-size: 12px;
    font-weight: bold;
    position: absolute;
    right: 1rem;
    text-transform: uppercase;
  }

  .logo {
    height: $collapsed-nav-height;
    overflow: hidden;
  }

  .nypl-logo {
    background: url("../img/lion.svg") no-repeat scroll 0 0/#{$logo-height} auto $nypl-white;
    background-position-y: -4px;
    margin: 0;
  }

  .service-buttons {
    min-height: $collapsed-service-height;

    li {
      display: none;
    }
  }

  .nav-buttons {
    font-size: 0;
    font-weight: bold;
    height: $collapsed-nav-height;
    margin-top: 0;
    text-transform: uppercase;

    li {
      box-shadow: none;
    }

    a {
      padding: 0.1em 0.4em;
    }

    .search {
      display: none;
    }
  }
}

.service-buttons {
  font-size: 0.8rem;
  padding: 0;
  text-transform: uppercase;

  @include media($mobile-breakpoint) {
    display: none;
    padding-top: 5px;
    width: 100%;

    li {
      border-bottom: 1px solid $nypl-white;
      float: left;
      line-height: 2;
      margin: 0 0 5px;
      width: 50%;
    }
  }

  li > a {
    @include basic-button($font-size: 0.8rem, $text-color: $nypl-white, $background-color: $nypl-red, $border-width: 0);
    @include service-button;

    &.donate {
      @include basic-button($font-size: 0.8rem, $text-color: $nypl-red, $background-color: $nypl-white, $border-width: 0);
      @include service-button;
    }
  }

  button.collapsible {
    @include basic-button($font-size: 0.8rem, $text-color: $nypl-white, $background-color: $nypl-red, $collapsible: true, $border-width: 0);
    @include service-button;
  }
}

.email-toggle {
  position: relative;

  a::after {
    transition: all $hover-time;
  }

  a.active::after {
    transform: scaleY(-1);
  }

  .subscribe-button {
    @include basic-button($border-width: 0.0625rem, $border-color: $nypl-white);
  }

  form {
    background-color: $nypl-search-color;
    color: $nypl-white;
    font-size: 1rem;
    min-width: 17rem;
    position: absolute;
    padding: 1rem;
    right: 0;
    text-transform: none;
    z-index: 1;

    @include media($mobile-breakpoint) {
      left: 0;
      right: auto;
    }
  }

  .email-toggle-title {
    font-size: 1.2rem;
    font-weight: bold;
    line-height: 1.5;
    margin: 0;
  }

  fieldset {
    border: 0;
    color: $page-text-color;
    margin: 1em 0 0.5em;
    padding: 0;
    position: relative;
  }

  label {
    display: block;
    font-weight: bold;
    margin-left: 0.5em;
    position: absolute;
  }

  input[type=text] {
    @include textfield;
  }

  .links {
    margin: 1em 0 0;
  }
}

.login-toggle { // should be renamed
  font-size: 0.8rem;
  position: absolute;
  right: 0;
  text-transform: uppercase;
  top: 1.5rem;

  button {
    text-transform: uppercase;
  }

  div {
    background-color: $nypl-search-color;
    color: $nypl-white;
    font-size: 1rem;
    padding: 1rem;
    padding-bottom: 0;
    position: absolute;
    right: 0;
    text-transform: none;
    z-index: 1;
  }

  a.inverted {
    display: block;
    margin-bottom: 1em;
    white-space: nowrap;
  }

  .welcome-message {
    display: inline-block;
    margin-right: 1em;
    text-transform: none;
  }

  > a,
  button.collapsible {
    @include basic-button($font-size: 0.8rem, $text-color: $nypl-white, $background-color: $nypl-gray, $collapsible: true, $border-width: 0);
    @include service-button;

    &:link {
      text-decoration: none;
    }
  }

  @include media($mobile-breakpoint) {
    top: -2rem;

    .welcome-message {
      display: none;
    }
  }
}

.nav-buttons {
  font-size: 1.1rem;
  line-height: 1.7;
  margin-top: calc(#{$logo-height} + 1rem);
  @include clearfix;

  @include media($intermediate-breakpoint) {
    font-size: 0.9rem;
  }

  @include media($mobile-breakpoint) {
    display: none;
    font-size: 1.2rem;
    margin-top: 1rem;

    li {
      border-bottom: 1px solid $nypl-light-gray;
      float: left;
      height: auto;
      line-height: 2;
      margin: 0 0 5px;
      width: 50%;
    }

    li.search {
      border: 0;
      font-size: 1rem;
      position: relative;
      right: initial;
      top: initial;
      width: 100%;
    }
  }

  a {
    border: 0;
    color: $page-color;
    display: block;
    overflow: hidden;
    padding: 0.2em 0.4em;
    text-decoration: none;
    text-overflow: ellipsis;
    transition: all $hover-time;
    white-space: nowrap;

    &:hover {
      color: $nypl-red;
    }

  }

  li {
    box-shadow: inset 0 0 0 $nypl-red;
    transition: box-shadow 0.2s;
  }

  li:hover,
  li.active {
    box-shadow: inset 0 -4px 0 $nypl-red;
  }

}


li.search {
  @include media($intermediate-breakpoint) {
    // float: none;
    // position: absolute;
    // right: 0;
    // top: -3rem;
  }

  #main-search {
    background-color: $nypl-search-color;
    margin: 0;
    position: relative;

    .search-button {
      @include basic-button($border-width: 0, $hover-background-color: $nypl-search-color-light);
    }

    &.display {
      display: block;
    }

    .search-query-content {
      position: relative;
    }

    .search-select {
      background-color: $nypl-search-color;
      font-size: 0.9rem;
      right: 0;
      padding: 0.1875rem;
      position: absolute;
      top: 2.65rem;
      white-space: nowrap;
      z-index: 1;
    }

    .search-radio-label {
      @include simple-radiobutton;
      display: inline-block;
      height: 2rem;
      line-height: 2;
      padding: 0 0.75rem 0 0.5rem;

      &.selected {
        background-color: $nypl-search-color-light;
      }

      &.focus {
        box-shadow: inset 0 0 0 3px $focus-color;
      }

    }

    input:focus {
      outline: none;
    }

    .search-query-label {
      color: $nypl-white;
      height: 2rem;
      left: 0.5rem;
      line-height: 2;
      position: absolute;
    }

    .form-text {
      @include input;
      box-shadow: inset 0 0 0 2px $nypl-search-color-dark;
      height: 2rem;
      margin: 0.3125rem 0.3125rem 0;
      padding: 0;
      text-indent: 0.5rem;
      transition: all $hover-time ease-out;
      width: 10rem;

      &.active {
        width: 16.5rem;
      }

      &:focus {
        background-color: $nypl-white;
        box-shadow: inset 0 0 0 4px $focus-color !important;
        color: $nypl-search-color-dark;
        outline: none;
      }
    }

    @include media($mobile-breakpoint) {
      .form-text,
      .search-button,
      .search-radio-label {
        height: 2.5rem;
        line-height: 2.5;
      }

      .form-text,
      .form-text.active {
        margin: 0.1875rem;
        width: 69.2%;
      }

      .search-button {
        height: 3rem;
        margin: 0;
        padding-top: 0.25rem;
        width: 30%;
      }

      .search-select {
        padding: 0 0 0.1875rem 0.1875rem;
        top: 3rem;
      }
    }

  }

}

